--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./static/css/style.css">
     <title>TypeScript</title>
 </head>
 <body>
     <div class="admin">
         <div class="admin__table" id="table">
-            
+            <div class="user_row">
+
+            </div>    
         </div>
         <div class="admin__form">
             <form>
@@ -23,7 +26,7 @@
                     <input type="email" id="input-email" placeholder="Эл.почта">
                 </div>
                 <div>
-                    <input type="text" id="input-phone" placeholder="Телефон">
+                    <input type="text" id="input-phone" placeholder="Телефон в формате +7xxxxxxxxxx">
                 </div>
                 <div>
                     <input type="number" id="input-age" placeholder="Возраст">
